# synapse

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  TODO.md  consult_cipher.py  maintain.py  pyproject.toml
.agents/skills/synapse/: SKILL.md
benchmarks/: retrieval_benchmark.py
benchmarks/fixtures/: retrieval_queries.json
benchmarks/fixtures/vault/: agency-memory.md  contextual-retrieval.md  cybernetic-librarian.md  database-operators.md  field-intelligence.md  launch-checklist.md  vector-maintenance.md  weak-signals.md
config/: synapse.example.toml  synapse.mcp.example.json
docs/: agent-introduction.md  architecture.md  cipher-interface.md  http-api.md  knowledge-admin-guide.md  mcp-requirements.md  openapi.json  openclaw-integration.md  quick-start.md  rfc-compiled-knowledge-layer.md
synapse/: cipher_service.py  db.py  discovery.py  embeddings.py  errors.py  export_openapi.py  gardener.py  index.py  knowledge_schema.py  knowledge_service.py  knowledge_ui.py  mcp_server.py  research_ingest.py  search.py  service_api.py  settings.py  smoke.py  validate.py  vector_store.py  web_api.py
synapse/providers/: __init__.py
synapse/providers/embeddings/: __init__.py  base.py  factory.py  infinity.py  ollama.py  (+2 more)
tests/: test_cipher_service.py  test_db.py  test_discovery.py  test_embeddings.py  test_export_openapi.py  test_gardener.py  test_index.py  test_knowledge_schema.py  test_knowledge_service.py  test_mcp_server.py  test_research_ingest.py  test_search.py  test_service_api_ingest.py  test_settings.py  test_smoke.py  test_validate.py  test_web_api.py
